# viumia

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: index.html  robots.txt  sitemap.xml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/parsers/: mod.rs  personio.rs
src/components/: AppLayout.tsx  DeleteConfirmModal.tsx  SaveSuccessModal.tsx  Sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx
src/context/: ThemeContext.tsx
src/pages/: Documents.tsx  JobDetail.tsx  Jobs.tsx  NewJob.tsx  Overview.tsx  Settings.tsx
src/types/: index.ts
src/types/tauri-plugins/: plugin-dialog.d.ts
src/utils/: api.ts
