[package]
name = "viumia"
version = "0.1.0"
description = "Viumia — Smart Job Application Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "viumia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite + compile-time checked queries
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
dirs = "5"
base64 = "0.22"
zip = "2"
flate2 = "1"



[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
